tests/interpreter/for-loop-block-error.stderr
error: identifier 'x' is not defined
 --> $DIR/for-loop-block-error.lox:2:5
  |
2 |     x;
  |     ^
