tests/interpreter/for-loop-block-error.lox
for ch in "foo" {
    x;
}
